--- a/src/aplicacionprofesores/ActualizacionDocente.form
+++ b/src/aplicacionprofesores/ActualizacionDocente.form
@@ -259,7 +259,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="18" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Programa"/>
+        <Property name="text" type="java.lang.String" value="Deporte"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="program">
