--- a/src/aplicacionprofesores/chek_in.form
+++ b/src/aplicacionprofesores/chek_in.form
@@ -132,7 +132,13 @@
         <Component class="javax.swing.JTable" name="tbl">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="new javax.swing.table.DefaultTableModel(&#xa;    new Object [][] {&#xa;        {&quot;Emprendimineto&quot;,&quot;Rodriguez Garc&#xed;a&quot;,&quot;Nestor Adres&quot;},&#xa;        {&quot;Electiva&quot;, &quot;Hern&#xe1;ndez Ramos&quot;, &quot;Cesar Augusto&quot;},&#xa;        {&quot;Emprendimiento&quot;, &quot;Rojas Rodriguez&quot;,&quot;Fiorella Constanza&quot;},&#xa;        {&quot;Salud&quot;,&quot;Bejarano Castillo&quot;, &quot;M&#xf3;nica Paola&quot;}&#xa;&#xa;    },&#xa;    new String [] {&#xa;        &quot;Facultad&quot;, &quot;Apellidos&quot;, &quot;Nombres&quot;,&quot;Informe&quot;&#xa;    }&#xa;)" type="code"/>
+              <Connection code="new javax.swing.table.DefaultTableModel(&#xa;    new Object [][] {&#xa;        {&quot;occidente&quot;,&quot;Rodriguez Garc&#xed;a&quot;,&quot;Nestor Adres&quot;},&#xa;        {&quot;occidente&quot;, &quot;Hern&#xe1;ndez Ramos&quot;, &quot;Cesar Augusto&quot;},&#xa;        {&quot;occidente&quot;, &quot;Rojas Rodriguez&quot;,&quot;Fiorella Constanza&quot;},&#xa;        {&quot;occidente&quot;,&quot;Bejarano Castillo&quot;, &quot;M&#xf3;nica Paola&quot;}&#xa;&#xa;    },&#xa;    new String [] {&#xa;        &quot;Facultad&quot;, &quot;Apellidos&quot;, &quot;Nombres&quot;,&quot;Informe&quot;&#xa;    }&#xa;)" type="code"/>
+            </Property>
+            <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
+              <TableColumnModel selectionModel="0"/>
+            </Property>
+            <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
+              <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
             </Property>
           </Properties>
         </Component>
